sections.css
.navigation-bar
{
    margin: 1em;
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    justify-content: flex-end;
}

.header-navigation .icon
{
    color: white;
    display: none;
}

.header-navigation
{
    position: absolute;
    right: 20px;
    top: 5%
}

/* development div stack elements */
@media screen and (max-width: 750px)
{
    #webdev
    {
        height: 1100px !important;
        min-height: 1100px;
        /* top: 85% !important; */
        /* height: s170% !important; */
    }
    .gray-web
    {
        /* margin-right: 2%;
        margin-left: 2%; */
        float: none !important;
        width: auto !important;
    }


    .gray-app
    {
        width: auto !important;
        float: none !important;
        /* margin-left: 2%;
        margin-right: 2%; */
    }

    .gray-other
    {
        float: none !important;
        width: auto !important;
        /* margin-right: 2%;
        margin-left: 2%; */
    }
}
/* skinny sceen makes webdev even taller */
@media screen and (max-width: 500px)
{
    #webdev
    {
        min-height: 1400px !important;
    }
}
/* about me gets taller when view is short on width */
@media screen and (max-width: 650px)
{
    #about-me
    {
        min-height: 700px !important;

    }
}
@media screen and (max-width: 600px)
{
    .header-navigation a
    {
        display: none;
    }
    .header-navigation a.icon
    {
        position: relative;
        float: right;
        display: block;
        top: 16px;
    }
}
@media screen and (max-width: 600px)
{
    .header-navigation.responsive
    {
        position: relative;
    }
    .header-navigation.responsive .icon
    {
        display: block;
        position: absolute;
        right: 0;
        top: 0;
    }
    .header-navigation.responsive a
    {
        float: none;
        display: block;
        text-align: left;
        margin-left: 50px;
    }
}

.hero-image
{
    overflow: hidden;
    min-height: 650px;
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn-images-1.medium.com/max/2600/1*VibJsLuJ_WJFRn45mCwytA.jpeg");
  
    /* Set a specific height */
    height: 70%;
    /*min-height: 320px;*/

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

/* Place text in the middle of the image */
.hero-text
{
    
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
}


.gray
{
    width: 100%;
    clear: both;
    float: left;
    min-height: 400px;
    background-color: rgb(230, 230, 230);
    color: black;
    position: relative;


    /* Set a specific height */

    height: 40%;

    /* Position and center the image to scale nicely on all screens */

    overflow: hidden;
}

.gray h2
{
    font-size: 50px;
    font-family: 'Playfair Display', sans-serif;
    font-weight: lighter;
}
.gray p
{
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 25px;
    font-weight: lighter;
}
.gray-text
{
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
}

.white
{
    width: 100%;
    clear: both;
    float: left;
    min-height: 400px;
    
    background-color: rgb(255, 255, 255);


    color: black;

    position: relative;


    /* Set a specific height */

    height: 40%;

    /* Position and center the image to scale nicely on all screens */
    position: relative;
    overflow: hidden;
    margin: 0px;
}

.white h2
{
    font-size: 50px;
    font-family: 'Playfair Display', sans-serif;
    font-weight: lighter;
}
.white p
{
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 25px;
    font-weight: lighter;
}
.white-text
{
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
}

#about-me
{
    clear: both;
    float: left;
    min-height: 500px;
    height: 50%;
    /* top: 100px; */
}

#webdev
{
    
    min-height: 600px;
    margin-bottom: 0px;
    height: 60%;
}

#contact-me
{
    min-height: 400px;
}

.gray-web
{
    margin-right: 2%;
    margin-left: 2%;
    float: left;
    width: 29%;
}


.gray-app
{
    width: 29%;
    float:left;

    margin-left: 2%;
    margin-right: 2%;
}

.gray-other
{
    float: left;
    width: 29%;
    margin-right: 2%;
    margin-left: 2%;
}

.gray-text
{
    width: 90%;
}

.gray-text h4
{
    font-weight: normal;
    font-size: 25px;
}

#webdev p
{
    font-size: 1.4em;
}

.mouse-image
{
    top: -5%;
}

